image overflow issues

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -47,7 +47,9 @@ body {
   }
 
   .carouselpic {
-    width: 1200px;
+    max-width: 100%;
+    height: auto;
+    width: auto;
     margin-bottom: 3rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
@@ -58,6 +60,9 @@ body {
 
   /* Since positioning the image, we need to help out the caption */
   .carousel-caption {
+    padding-top: 4rem;
+    max-height: 100%;
+    max-width: 100%;
     bottom: 3rem;
     z-index: 10;
   }
